# telaio

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/telaio/: __init__.py  telaio.py  video_file.py
