[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "telaio"
version = "0.0.3"
authors = [
  { name="Dzmitry Plashchynski", email="plashchynski@gmail.com" },
]
description = "A toolset to work with video files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/plashchynski/telaio"
"Bug Tracker" = "https://github.com/plashchynski/telaio/issues"
